--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,27 @@
         android:theme="@style/Theme.Mobile"
         tools:targetApi="31">
         <activity
+            android:name=".SettingPackage.PrivacyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SettingPackage.LanguageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SettingPackage.InstructionItemContentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SettingPackage.InstructionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SettingPackage.EditInfoActivity"
+            android:exported="false" />
+        <activity
             android:name=".SignupActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/splashscreenTheme"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/splashscreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,8 +42,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
