manga reader + next and previous chap

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,10 +41,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MangaDetailActivity"
+            android:name=".MangaDetailPackage.MangaDetailActivity"
             android:exported="true" />
         <activity
-            android:name=".FavoriteDetailActivity"
+            android:name=".MangaDetailPackage.FavoriteDetailActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MangaDetailPackage.MangaReaderActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
