--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Mobile"
         tools:targetApi="31">
         <activity
+            android:name=".SettingPackage.BuyingCoinActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SettingPackage.SubscriptionActivity"
+            android:exported="false" />
+        <activity
             android:name=".SettingPackage.PrivacyActivity"
             android:exported="false" />
         <activity
