--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,9 @@
             android:name=".MangaDetailPackage.MangaReaderActivity"
             android:exported="true" />
         <activity
+            android:name=".MangaDetailPackage.ChapterReaderActivity"
+            android:exported="true" />
+        <activity
             android:name=".MangaDetailPackage.ChapterActivity"
             android:exported="true" />
         <activity
