làm xong search bằng tên + thể loại

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,9 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
+        <activity
+            android:name=".MainActivityPackage.SearchActivity.GenreFilterActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
