--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-<uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,7 +13,13 @@
         android:roundIcon="@drawable/dragon_ball_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mobile"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".SettingPackage.SuccessPayment2Activity"
+            android:exported="true" />
+        <activity
+            android:name=".Quiz.QuizActivity"
+            android:exported="false" />
         <activity
             android:name=".SettingPackage.SuccessPaymentActivity"
             android:exported="true" />
@@ -69,7 +77,7 @@
         <activity
             android:name=".LoginActivity"
             android:exported="true"
-            android:theme="@style/splashscreenTheme" >
+            android:theme="@style/splashscreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
